# csv-scaler

./: .gitignore  Makefile  README.md  pyproject.toml
csv-scaler/: .gitignore  Makefile  README.md  pyproject.toml
csv-scaler/csv_scaler/: __main__.py
csv-scaler/tests/: test_csv_scaler.py
csv_scaler/: __init__.py  __main__.py
