[tool.poetry]
name = "csv-scaler"
version = "0.1.0"
description = "A tool that duplicates a given csv file by multiplying each line changing only the primary key."
authors = ["Mateusz Mozgawa <matuesz.mozgawa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pylint = "^2.15.2"
radon = "^5.1.0"
bandit = "^1.7.4"
mypy = "^0.971"
pre-commit = "^2.20.0"
docformatter = "^1.5.0"
black = "^22.8.0"
isort = "^5.10.1"
coverage = "^6.4.4"
tox = "^3.26.0"

[tool.poetry.scripts]
csv-scaler = "csv_scaler:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 38
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100

disable = ["no-value-for-parameter"]

[tool.pylint.FORMAT]
max-module-lines = 100
good-names=["i", "f"]
max-line-length=100

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps = pytest >= 5.2
commands = pytest
"""
